// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`can build a plugin 1`] = `
Object {
  "status": 0,
  "stderr": "",
  "stdout": "🎃  Generating Nexus artifacts ...
🎃  Compiling ...
🎃  Pumpkins app successfully compiled! node_modules/.build
",
}
`;

exports[`can build a plugin 2`] = `
Object {
  "children": Array [
    Object {
      "name": "app.js",
      "size": 214,
      "type": "file",
    },
    Object {
      "name": "myplugin.js",
      "size": 327,
      "type": "file",
    },
    Object {
      "name": "schema.js",
      "size": 499,
      "type": "file",
    },
    Object {
      "name": "start.js",
      "size": 480,
      "type": "file",
    },
  ],
  "name": ".build",
  "size": 1520,
  "type": "dir",
}
`;

exports[`can build with just a schema folder of modules 1`] = `
Object {
  "status": 0,
  "stderr": "",
  "stdout": "🎃  Generating Nexus artifacts ...
🎃  Compiling ...
🎃  Pumpkins app successfully compiled! node_modules/.build
",
}
`;

exports[`can build with just a schema folder of modules 2`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "name": "a.js",
          "size": 213,
          "type": "file",
        },
      ],
      "name": "schema",
      "size": 213,
      "type": "dir",
    },
    Object {
      "name": "start.js",
      "size": 509,
      "type": "file",
    },
  ],
  "name": ".build",
  "size": 722,
  "type": "dir",
}
`;

exports[`can build with just a schema module 1`] = `
Object {
  "status": 0,
  "stderr": "",
  "stdout": "🎃  Generating Nexus artifacts ...
🎃  Compiling ...
🎃  Pumpkins app successfully compiled! node_modules/.build
",
}
`;

exports[`can build with just a schema module 2`] = `
Object {
  "children": Array [
    Object {
      "name": "schema.js",
      "size": 213,
      "type": "file",
    },
    Object {
      "name": "start.js",
      "size": 507,
      "type": "file",
    },
  ],
  "name": ".build",
  "size": 720,
  "type": "dir",
}
`;

exports[`can build with schema + app modules 1`] = `
Object {
  "status": 0,
  "stderr": "",
  "stdout": "🎃  Generating Nexus artifacts ...
🎃  Compiling ...
🎃  Pumpkins app successfully compiled! node_modules/.build
",
}
`;

exports[`can build with schema + app modules 2`] = `
Object {
  "children": Array [
    Object {
      "name": "app.js",
      "size": 148,
      "type": "file",
    },
    Object {
      "name": "schema.js",
      "size": 213,
      "type": "file",
    },
    Object {
      "name": "start.js",
      "size": 480,
      "type": "file",
    },
  ],
  "name": ".build",
  "size": 841,
  "type": "dir",
}
`;

exports[`can nest modules 1`] = `
Object {
  "status": 0,
  "stderr": "",
  "stdout": "🎃  Generating Nexus artifacts ...
🎃  Compiling ...
🎃  Pumpkins app successfully compiled! node_modules/.build
",
}
`;

exports[`can nest modules 2`] = `
Object {
  "children": Array [
    Object {
      "name": "app.js",
      "size": 148,
      "type": "file",
    },
    Object {
      "name": "schema.js",
      "size": 213,
      "type": "file",
    },
    Object {
      "name": "start.js",
      "size": 480,
      "type": "file",
    },
  ],
  "name": ".build",
  "size": 841,
  "type": "dir",
}
`;
